# multi-agent-team

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.kiro/specs/multi-agent-development-system/: advanced-features.md  design.md  missing-features.md  ml-ai-agents.md  requirements.md  tasks.md
agents/templates/: ai_engineer.md  architect.md  code_reviewer.md  data_scientist.md  debugger.md  developer.md  ml_engineer.md  product_analyst.md
config/: architecture_rules.yaml  llm_config.yaml  system_config.yaml
docs/: GETTING_STARTED.md
examples/: simple_workflow.py
src/multi_agent/: __init__.py  cli.py
src/multi_agent/agents/: architect.py  base_agent.py  code_reviewer.py  debugger.py  developer.py  loader.py  product_analyst.py  template_parser.py
src/multi_agent/config/: loader.py
src/multi_agent/context/: __init__.py  manager.py  models.py  persistence.py
src/multi_agent/core/: __init__.py  debt_tracker.py  error_handler.py  exceptions.py  models.py
src/multi_agent/integrations/: claude_provider.py  llm_provider.py  logging_system.py  openai_provider.py  version_control.py
src/multi_agent/orchestration/: __init__.py  orchestrator.py
src/multi_agent/workflow/: __init__.py  manager.py  models.py  persistence.py
tests/unit/: test_agent_loader.py  test_base_agent.py  test_claude_provider.py  test_context_manager.py  test_context_models.py  test_context_persistence.py  test_llm_provider.py  test_logging_system.py  test_models.py  test_openai_provider.py  test_specialized_agents.py  test_template_parser.py  test_workflow_manager.py  test_workflow_models.py  test_workflow_persistence.py
workflows/: default_workflow.yaml
